src/test/resources/de/uni_luebeck/isp/tessla/core/errors/infinite/direct-infinite-recursion.tessla
def x: Events[Int] := x
out x